correction 15/9 with all question

--- a/Machine_learning_revision_project.ipynb
+++ b/Machine_learning_revision_project.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "a4e2be26",
+   "id": "d80a4771",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d2dd68a2",
+   "id": "b1ddcf8a",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "eb08e853",
+   "id": "6c3d8d31",
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c3893b99",
+   "id": "f1ef2c8f",
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2278830",
+   "id": "8e696a2b",
    "metadata": {},
    "source": [
     "We can see that some of the data is missing in email, Country, Income.1, Income.2\n",
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f0ecbe75",
+   "id": "cfec5cc9",
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61a5aa0f",
+   "id": "c0fa2c60",
    "metadata": {},
    "source": [
     "As we can see that index 9 has all null values. So we need to fill them with provided data. Also Income.1 is having numerical values with $ on it which makes them categorical column. \n",
@@ -569,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "989f49cc",
+   "id": "d40e83c6",
    "metadata": {
     "scrolled": true
    },
@@ -911,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "cb36b585",
+   "id": "97b5a211",
    "metadata": {},
    "outputs": [
     {
@@ -1254,7 +1254,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8cde7b77",
+   "id": "2a4af3bc",
    "metadata": {},
    "outputs": [
     {
@@ -1276,7 +1276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46653a6f",
+   "id": "8bc41b28",
    "metadata": {},
    "source": [
     "we can see UAS looks like its a typo error, so we change it to USA. also we have nan so we can fill it with mode of this column as it is an categorical column."
@@ -1285,7 +1285,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "fcf87590",
+   "id": "beaf29b8",
    "metadata": {},
    "outputs": [
     {
@@ -1625,7 +1625,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "9659aff1",
+   "id": "d1c954d4",
    "metadata": {
     "scrolled": true
    },
@@ -1967,7 +1967,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77ac29ea",
+   "id": "071ed1d2",
    "metadata": {},
    "source": [
     "# Q4. Add total income column which is submission of Income.1 and Income.2\n",
@@ -1979,7 +1979,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "dc9a6403",
+   "id": "bf12a55e",
    "metadata": {},
    "outputs": [
     {
@@ -2004,7 +2004,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdda13e4",
+   "id": "086668bb",
    "metadata": {},
    "source": [
     "we can see their is $ sign which we need to remove in order to make it an int column."
@@ -2013,7 +2013,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "3a3be82c",
+   "id": "0520225a",
    "metadata": {},
    "outputs": [
     {
@@ -2034,7 +2034,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "13ae4b57",
+   "id": "4cd8e78d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2046,7 +2046,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "c3667773",
+   "id": "36622f25",
    "metadata": {},
    "outputs": [
     {
@@ -2090,7 +2090,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "e176e963",
+   "id": "27d6436a",
    "metadata": {},
    "outputs": [
     {
@@ -2114,7 +2114,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "b04a54a2",
+   "id": "394b83da",
    "metadata": {},
    "outputs": [
     {
@@ -2477,7 +2477,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "6364b33f",
+   "id": "069eb9b5",
    "metadata": {},
    "outputs": [
     {
@@ -2819,7 +2819,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "fcfea7fb",
+   "id": "820c15ae",
    "metadata": {},
    "outputs": [
     {
@@ -3161,7 +3161,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "688062ec",
+   "id": "5cb0ba1c",
    "metadata": {},
    "outputs": [
     {
@@ -3523,7 +3523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb949870",
+   "id": "5df56196",
    "metadata": {},
    "source": [
     "# 15/9 questions\n",
@@ -3534,7 +3534,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "2ca4679e",
+   "id": "fce4727a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3545,7 +3545,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "b5ac2689",
+   "id": "f0ff0b37",
    "metadata": {},
    "outputs": [
     {
@@ -3927,7 +3927,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d673dfbf",
+   "id": "4a12b3f9",
    "metadata": {},
    "source": [
     "Now entire DOB is in same format. which is yyyy-mm-dd format"
@@ -3936,7 +3936,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "7cbb7898",
+   "id": "56f204f7",
    "metadata": {},
    "outputs": [
     {
@@ -4364,7 +4364,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "e9c8729f",
+   "id": "1ee57d21",
    "metadata": {},
    "outputs": [
     {
@@ -4747,7 +4747,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "7d5242ca",
+   "id": "7573da98",
    "metadata": {},
    "outputs": [
     {
@@ -4782,7 +4782,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9d33308",
+   "id": "e5d1f85c",
    "metadata": {},
    "source": [
     "From here we can see the index positions of columns. by using iloc we can rearrange columns.\n"
@@ -4791,7 +4791,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "c8a7e22b",
+   "id": "9ce394b7",
    "metadata": {},
    "outputs": [
     {
@@ -5174,7 +5174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3aa4e15e",
+   "id": "7923ee35",
    "metadata": {},
    "source": [
     "Now our dataset is aaranged in the desire form."
@@ -5183,7 +5183,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "7209755a",
+   "id": "5919a97f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5199,7 +5199,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "97ac32ae",
+   "id": "197aa446",
    "metadata": {},
    "outputs": [
     {
@@ -5233,7 +5233,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "079a59a4",
+   "id": "d8313200",
    "metadata": {},
    "outputs": [
     {
@@ -5260,7 +5260,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "725bac86",
+   "id": "dcf853ae",
    "metadata": {},
    "outputs": [
     {
@@ -5375,10 +5375,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ddd06a1",
+   "id": "ff939d03",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.groupby(['Country','Company']).Total_Income.mean()"
+   ]
   }
  ],
  "metadata": {
